--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
       <section></section>
       <section></section>
     </main>
+    <script src=".assets/js/script.js"></script>
   </body>
 </html>
