--- a/index.html
+++ b/index.html
@@ -4,32 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css"
       rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
   </head>
   <body>
-    <header class="header">Weather Dashboard</header>
-    <main>
-      <aside>
-
-        <form>
-          <div class="mb-3">
-            <label for="searchBar" class="form-label">Search for a City:</label>
-            <input type="text" class="form-control" id="searchBar">
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
-        <div></div>
-      </aside>
-      <section></section>
-      <section></section>
-    </main>
-    <script src=".assets/js/script.js"></script>
+    <header>
+      <h1>Weather Dashboard</h1>
+    </header>
+    <div class="input-group">
+      <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+      <button type="button" class="btn btn-outline-primary">search</button>
+    </div>
+    <script src="assets/js/script.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"
+    ></script>
   </body>
 </html>
